--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,8 @@
     "react-qr-scanner": "^1.0.0-alpha.11",
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,7 +45,6 @@
     "rules": {
       "react-hooks/exhaustive-deps": "off"
     }
-    
   },
   "browserslist": {
     "production": [
