--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -3,7 +3,7 @@ name: Deploy to S3
 on:
   push:
     branches:
-      - (pending)
+      - creat-test-quantity-with-client-feedback-change
 
 jobs:
   deploy:
