--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-qr-scanner": "^1.0.0-alpha.11",
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
+    "react-simple-pull-to-refresh": "^1.3.3",
     "typescript": "^4.9.5",
     "xlsx": "^0.18.5"
   },
